@@ -14,7 +14,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.superbiz.moviefun.movies;
+package org.superbiz.moviefun.moviesapi;
 
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
@@ -36,10 +36,11 @@ public class MovieServlet extends HttpServlet {
 
     public static int PAGE_SIZE = 5;
 
-    private MoviesBean moviesBean;
+    private MoviesClient moviesClient
+            ;
 
-    public MovieServlet(MoviesBean moviesBean) {
-        this.moviesBean = moviesBean;
+    public MovieServlet(MoviesClient moviesClient){
+        this.moviesClient = moviesClient;
     }
 
     @Override
@@ -63,9 +64,9 @@ public class MovieServlet extends HttpServlet {
             int rating = Integer.parseInt(request.getParameter("rating"));
             int year = Integer.parseInt(request.getParameter("year"));
 
-            Movie movie = new Movie(title, director, genre, rating, year);
-
-            moviesBean.addMovie(movie);
+            MovieInfo movie = new MovieInfo(title, director, genre, rating, year);
+            moviesClient
+                    .addMovie(movie);
             response.sendRedirect("moviefun");
             return;
 
@@ -73,7 +74,8 @@ public class MovieServlet extends HttpServlet {
 
             String[] ids = request.getParameterValues("id");
             for (String id : ids) {
-                moviesBean.deleteMovieId(new Long(id));
+                moviesClient
+                        .deleteMovieId(Long.valueOf(id));
             }
 
             response.sendRedirect("moviefun");
@@ -86,18 +88,20 @@ public class MovieServlet extends HttpServlet {
             int count = 0;
 
             if (StringUtils.isEmpty(key) || StringUtils.isEmpty(field)) {
-                count = moviesBean.countAll();
+                count = moviesClient
+                        .countAll();
                 key = "";
                 field = "";
             } else {
-                count = moviesBean.count(field, key);
+                count = moviesClient
+                        .count(field, key);
             }
 
             int page = 1;
 
             try {
                 page = Integer.parseInt(request.getParameter("page"));
-            } catch (Exception e) {
+            } catch (Exception ignored) {
             }
 
             int pageCount = (count / PAGE_SIZE);
@@ -114,12 +118,14 @@ public class MovieServlet extends HttpServlet {
             }
 
             int start = (page - 1) * PAGE_SIZE;
-            List<Movie> range;
+            List<MovieInfo> range;
 
             if (StringUtils.isEmpty(key) || StringUtils.isEmpty(field)) {
-                range = moviesBean.findAll(start, PAGE_SIZE);
+                range = moviesClient
+                        .findAll(start, PAGE_SIZE);
             } else {
-                range = moviesBean.findRange(field, key, start, PAGE_SIZE);
+                range = moviesClient
+                        .findRange(field, key, start, PAGE_SIZE);
             }
 
             int end = start + range.size();
